# wolkenwelten-rs

./: .gitignore  Cargo.toml  DEVLOG.md  README.md  build.rs  flake.nix  tsconfig.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: check.yml  ci.yml  release.yml
assets/voxel_meshes/: bag.vox  bush_b.vox  crab.vox  fist.vox  grenade.vox  rock_b.vox  rock_c.vox  tree.vox
assets/voxel_meshes/crab/: idle_1.vox  walk_1.vox
assets/voxel_meshes/king_crab/: idle_1.vox  idle_2.vox
backend/: Cargo.toml
backend-lib/: Cargo.toml
backend-lib/src/: chunk.rs  state.rs
backend/src/: block.rs
block_mining/: Cargo.toml
block_mining/src/: lib.rs
client/: Cargo.toml
client/assets/: fist.vox
client/src/: event.rs  frustum.rs  input.rs  lib.rs  meshes.rs  queue.rs  render.rs  render_reactor.rs  shader.rs  state.rs  texture.rs  ui.rs  winit.rs
client/src/meshes/: block.rs  mesh.rs  text.rs  util.rs  vertex.rs  voxel.rs
client/src/meshes/block/: meshgen.rs  vertex.rs
client/src/render/: block_mining.rs  chungus.rs  entity.rs  grenade.rs  held_item.rs  item_drop.rs  shadow.rs  sky.rs
client/src/shaders/: block.frag  block.vert  block.wgsl  mesh.frag  mesh.vert  mesh.wgsl  text.frag  text.vert  voxel.frag  voxel.vert
client/src/state/: static_meshes.rs  static_shaders.rs  static_textures.rs
client/src/ui/: debug.rs  healthbar.rs  inventory.rs  log.rs
client_winit/: Cargo.toml
client_winit/src/: input.rs  lib.rs
common/: Cargo.toml
common/src/: block_type.rs  chunk.rs  events.rs  item.rs  iter.rs  lib.rs  message.rs  queue.rs  reactor.rs
common/src/chunk/: block.rs  light.rs
core/: Cargo.toml
core/assets/: bush_c.vox  rock_a.vox  spruce_a.vox  tree_b.vox  tree_c.vox
core/src/: block_type.rs  character.rs  chungus.rs  chunk.rs  entity.rs  experience.rs  game_log.rs  health.rs  item.rs  iter.rs  lib.rs  message.rs  queue.rs  reactor.rs  state.rs  worldgen.rs
core/src/chunk/: block.rs  fluid.rs  light.rs
core/src/worldgen/: asset.rs  block.rs  outline.rs  worldbox.rs
docs/: commit_messages.md  gameplay.md  release_checklist.md
frontend/: Cargo.toml
frontend-lib/: Cargo.toml
frontend-lib/src/: input.rs  render.rs  shader.rs  state.rs
frontend-lib/src/meshes/: block.rs
frontend-lib/src/state/: static_meshes.rs  static_shaders.rs  static_textures.rs
frontend/src/: input.rs  render.rs
frontend/src/meshes/: block.rs
game/: Cargo.toml
game/src/: block.rs  block_mining.rs  block_types.rs  character.rs  chungus.rs  chunk.rs  entity.rs  event.rs  game_log.rs  grenade.rs  health.rs  item_drop.rs  lib.rs  state.rs  worldgen.rs
game/src/chunk/: block.rs  light.rs  worldgen.rs
game/src/worldgen/: asset.rs  rock.rs  vegetation.rs
grenade/: Cargo.toml
grenade/src/: lib.rs
input_winit/: Cargo.toml
input_winit/src/: lib.rs
item_drop/: Cargo.toml
item_drop/src/: lib.rs
items/: Cargo.toml
items/src/: item_drop.rs  lib.rs
map/: Cargo.toml
map/src/: lib.rs
meshgen/: Cargo.toml
meshgen/src/: generator.rs  lib.rs  vertex.rs
mob/: Cargo.toml
mob/assets/crab/: attack_1.vox  attack_2.vox  idle_2.vox  walk_2.vox
mob/assets/king_crab/: walk_1.vox
mob/src/: lib.rs
modules/: main.js  main.ts  preamble.js  test.js
particles/: Cargo.toml
particles/src/: lib.rs  particle.vert
scripting/: Cargo.toml  build.rs  tsconfig.json
scripting/src/: io.rs  item.rs  lib.rs  preamble.js  runtime.rs  world.rs
scripting/stdlib/: lib.ts
server/: Cargo.toml
server/src/: entity.rs
shadow/: Cargo.toml
shadow/src/: lib.rs  shadow.frag  shadow.vert
sky/: Cargo.toml
sky/src/: lib.rs
slayer_mode/: Cargo.toml
slayer_mode/src/: lib.rs  main.js
sound/: Cargo.toml
sound/src/: lib.rs  sfx.rs  sfx_list.rs
src/: backend.rs  frontend.rs  input.rs  lib.rs  main.rs  render_gl.rs  triangle.frag  triangle.vert  ui.rs
src/app/: mod.rs
src/app/state/: mod.rs
src/backend/: block.rs  chunk.rs  entity.rs  state.rs
src/frontend/: input.rs  mesh.rs  meshes.rs  render.rs  shader.rs  state.rs  texture.rs
src/frontend/mesh/: block.rs  mesh.rs  text.rs  util.rs
src/frontend/meshes/: block.rs  mesh.rs  text.rs  util.rs  vertex.rs
src/frontend/shaders/: block.vert
src/frontend/state/: frontend_state.rs  static_meshes.rs  static_shaders.rs  static_textures.rs  viewport.rs
src/game/: entity.rs  mod.rs  vector.rs
src/game/state/: mod.rs
src/input/: input_state.rs  mod.rs
src/render/: colored_mesh.rs  mesh.rs  mod.rs  program.rs  shader.rs  texture.rs  texture_array.rs  vertex.rs
src/render/mesh/: block_mesh.rs  colored_mesh.rs  mesh.rs  mod.rs  text_mesh.rs  vertex.rs
src/render/state/: mod.rs  render_state.rs  viewport.rs
src/render/state/mesh_list/: mod.rs
src/render/state/shader_list/: block.frag  colored_mesh.frag  colored_mesh.vert  mesh.frag  mesh.vert  mod.rs  text_shader.frag  text_shader.vert
src/render/state/texture_list/: mod.rs
tools/build-linux/: build.sh
tools/build-macos/: Info.plist  build.sh  wolkenwelten.icns
tools/build-windows/: build.sh  wolkenwelten.rc
worldgen/: Cargo.toml
worldgen/assets/: bush_a.vox  tree.vox
worldgen/src/: asset.rs  lib.rs
