[package]
name = "wolkenwelten"
version = "0.0.4"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://wolkenwelten.net"
authors = ["Benjamin Vincent Schulenburg <ben@wolkenwelten.net>"]
description = """
An open voxel sandbox
"""
# The general section with crate name, license, etc.
build = "build.rs"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.6"

[dependencies]
wolkenwelten-client-winit = { path = "client_winit" }
wolkenwelten-common = { path = "common" }
wolkenwelten-game = { path = "game" }
wolkenwelten-sound = { path = "sound", optional = true }

[profile.dev]
opt-level = 2
lto = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
default = ["sound"]
sound = ["dep:wolkenwelten-sound"]