[package]
name = "wolkenwelten"
build = "build.rs"
version = "0.0.4"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://wolkenwelten.net"
authors = ["Benjamin Vincent Schulenburg <ben@wolkenwelten.net>"]
description = """
An open voxel sandbox
"""

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.6"

[dependencies]
wolkenwelten-client = { path = "client" }
wolkenwelten-client-winit = { path = "client_winit" }
wolkenwelten-common = { path = "common" }
wolkenwelten-game = { path = "game" }
wolkenwelten-scripting = { path = "scripting" }

wolkenwelten-block-mining = { path = "block_mining", optional = true }
wolkenwelten-particles = { path = "particles", optional = true }
wolkenwelten-shadow = { path = "shadow", optional = true }
wolkenwelten-item-drop = { path = "item_drop", optional = true }
wolkenwelten-grenade = { path = "grenade", optional = true }
wolkenwelten-sky = { path = "sky", optional = true }
wolkenwelten-sound = { path = "sound", optional = true }

[profile.dev]
opt-level = 2
lto = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
default = ["block-mining", "item-drop", "grenade", "particles", "sky", "shadow", "sound"]
block-mining = ["dep:wolkenwelten-block-mining"]
grenade = ["dep:wolkenwelten-grenade"]
sound = ["dep:wolkenwelten-sound"]
sky = ["dep:wolkenwelten-sky"]
shadow = ["dep:wolkenwelten-shadow"]
particles = ["dep:wolkenwelten-particles"]
item-drop = ["dep:wolkenwelten-item-drop"]

[workspace]
members = ["block_mining","client","client_winit","common","game","grenade","item_drop","meshgen","particles","scripting","shadow","sky","sound"]