[package]
name = "wolkenwelten"
build = "build.rs"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://wolkenwelten.net"
authors = ["Benjamin Vincent Schulenburg <ben@wolkenwelten.net>"]
description = """
An open voxel sandbox
"""

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.6"

[dependencies]
wolkenwelten-client = { path = "client" }
wolkenwelten-core = { path = "core" }
wolkenwelten-scripting = { path = "scripting" }

wolkenwelten-block-mining = { path = "block_mining", optional = true }
wolkenwelten-particles = { path = "particles", optional = true }
wolkenwelten-mob = { path = "mob", optional = true }
wolkenwelten-shadow = { path = "shadow", optional = true }
wolkenwelten-item-drop = { path = "item_drop", optional = true }
wolkenwelten-grenade = { path = "grenade", optional = true }
wolkenwelten-sky = { path = "sky", optional = true }
wolkenwelten-sound = { path = "sound", optional = true }

[profile.dev]
opt-level = 2
lto = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
default = ["block-mining", "item-drop", "grenade", "mob", "particles", "sky", "shadow", "sound"]
block-mining = ["dep:wolkenwelten-block-mining"]
grenade = ["dep:wolkenwelten-grenade"]
mob = ["dep:wolkenwelten-mob"]
sound = ["dep:wolkenwelten-sound"]
sky = ["dep:wolkenwelten-sky"]
shadow = ["dep:wolkenwelten-shadow"]
particles = ["dep:wolkenwelten-particles"]
item-drop = ["dep:wolkenwelten-item-drop"]

[workspace]
members = ["block_mining","client","core","grenade","item_drop","meshgen","mob","particles","scripting","shadow","sky","sound"]