[package]
name = "wolkenwelten-client"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://wolkenwelten.net"

[dependencies]
anyhow = "1.0"
enum-map = "2.4"
vox-format = "0.1"
glium = "0.32"
glam = "0.22"
rgb = "0.8"
winit = "0.27"
tobj = "3.2"
rand = "0.8"
image = { version = "0.24", default-features = false, features = ["png"]}
wolkenwelten-core = { path = "../core" }
wolkenwelten-meshgen = { path = "../meshgen" }