[package]
name = "wolkenwelten-client"
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://wolkenwelten.net"

[dependencies]
anyhow = "1.0"
enum-map = "2.4"
vox-format = "0.1"
glam = "0.23"
rgb = "0.8"
tobj = "3.2"
rand = "0.8"
image = { version = "0.24", default-features = false, features = ["png"]}
raw-window-handle = "0.5"
wolkenwelten-core = { path = "../core" }
wolkenwelten-meshgen = { path = "../meshgen" }

[dependencies.glium]
path = "../../glium"
default-features = false
features = ["glutin_no_default_backend"]

[dependencies.glutin]
version = "0.30.4"
default-features = false
features = ["glx"]

[dependencies.glutin-winit]
version = "0.3"
default-features = false
features = ["glx"]

[dependencies.winit]
version = "0.28"
default-features = false
features = ["x11"]