[package]
name = "wolkenwelten-client-winit"
version = "0.0.4"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://wolkenwelten.net"

[dependencies]
enum-map = "2.4"
winit = "0.27"
glam = "0.22"
glium = "0.32"
wolkenwelten-client = { path = "../client" }
wolkenwelten-common = { path = "../common" }
wolkenwelten-game = { path = "../game" }
