[package]
name = "wolkenwelten-common"
version = "0.0.4"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://wolkenwelten.net"

[dependencies]
rgb = { version = "0.8.34", features = ["serde"] }
glam = { version = "0.22", features = ["bytemuck", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
