[package]
name = "wolkenwelten-game"
version = "0.0.4"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://wolkenwelten.net"

[dependencies]
anyhow = "1.0"
vox-format = "0.1"
rgb = "0.8.34"
glam = "0.22"
noise = "0.8"
rand = "0.8"
rand_xorshift = "0.3.0"
wolkenwelten-common = { path = "../common" }
wolkenwelten-scripting = { path = "../scripting" }
