[package]
name = "wolkenwelten-map"
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://wolkenwelten.net"

[dependencies]
anyhow = "1.0"
glium = "0.32"
glam = "0.22"
image = { version = "0.24", default-features = false, features = ["png"]}
wolkenwelten-client = { path = "../client" }
wolkenwelten-core = { path = "../core" }
