[package]
name = "wolkenwelten-map"
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://wolkenwelten.net"

[dependencies]
anyhow = "1.0"
glam = "0.23"
image = { version = "0.24", default-features = false, features = ["png"]}
wolkenwelten-client = { path = "../client" }
wolkenwelten-core = { path = "../core" }

[dependencies.glium]
path = "../../glium"
default-features = false
features = ["glutin_backend"]

