[package]
name = "wolkenwelten-meshgen"
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://wolkenwelten.net"

[dependencies]
wolkenwelten-core = { path = "../core" }

[dependencies.glium]
path = "../../glium"
default-features = false
features = ["glutin_no_default_backend"]

