[package]
name = "wolkenwelten-mob"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://wolkenwelten.net"

[dependencies]
anyhow = "1.0"
glium = "0.32"
glam = "0.22"
rand = "0.8"
rand_xorshift = "0.3"
wolkenwelten-client = { path = "../client" }
wolkenwelten-core = { path = "../core" }
