[package]
name = "wolkenwelten-particles"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://wolkenwelten.net"

[dependencies]
crossbeam-channel = "0.5"
rgb = "0.8.34"
glium = "0.32"
glam = "0.22"
rand = "0.8"
rand_chacha = "0.3"
wolkenwelten-common = { path = "../common" }

