[package]
name = "wolkenwelten-scripting"
build = "build.rs"
version = "0.0.4"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://wolkenwelten.net"

[dependencies]
glam = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
v8 = "0.56"
wolkenwelten-client-winit = { path = "../client_winit" }
wolkenwelten-common = { path = "../common" }
wolkenwelten-game = { path = "../game" }

[build-dependencies]
anyhow = "1.0"
swc = "0.232"
swc_common = "0.29"
swc_ecma_parser = { version = "0.122", features = ["typescript"] }