[package]
name = "wolkenwelten-scripting"
build = "build.rs"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://wolkenwelten.net"

[dependencies]
glam = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
v8 = "0.58"
wolkenwelten-client = { path = "../client" }
wolkenwelten-core = { path = "../core" }

[build-dependencies]
anyhow = "1.0"
swc = "0.236"
swc_common = "0.29"
swc_ecma_parser = { version = "0.123", features = ["typescript"] }