[package]
name = "wolkenwelten-sound"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://wolkenwelten.net"

[dependencies]
crossbeam-channel = "0.5"
rodio = {version = "0.16", default-features = false, features = ["vorbis"]}
wolkenwelten-common = { path = "../common" }