[package]
name = "wolkenwelten-sound"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://wolkenwelten.net"

[dependencies]
rodio = {version = "0.16", default-features = false, features = ["vorbis"]}
wolkenwelten-client = { path = "../client" }
wolkenwelten-common = { path = "../common" }
glam = "0.22"