[package]
name = "wolkenwelten-worldgen"
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0-or-later"
homepage = "https://wolkenwelten.net"

[dependencies]
anyhow = "1.0"
glam = "0.23"
vox-format = "0.1"
fast-math = "0.1"
rand = "0.8"
rand_xorshift = "0.3"
wolkenwelten-client = { path = "../client" }
wolkenwelten-core = { path = "../core" }